# ros2_workload_scx

n1_4/src/planner/: package.xml
n1_4/src/planner/config/: planner_config.yaml
n1_4/src/planner/src/: n3.cpp
n1_4/src/process/: CMakeLists.txt
n1_4/src/process/config/: process_config.yaml
n1_4/src/process/src/: preprocess_node.cpp
n1_4/src/sink/config/: sink_config.yaml
n1_7/install/: local_setup.sh  setup.sh
n1_7/install/fanout/share/fanout/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
n1_7/install/planner/share/planner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
n1_7/install/process/share/process/: local_setup.dsv  local_setup.sh  package.sh
n1_7/log/: latest_build
n1_7/src/fanout/: CMakeLists.txt
n1_7/src/fanout/config/: n7_config.yaml
n1_7/src/fanout/src/: n5.cpp  n6.cpp  n7.cpp
n1_7/src/planner/: CMakeLists.txt
n1_7/src/sensor/: CMakeLists.txt
n1_7/src/sensor/config/: workload_config.yaml
rust_test/procwatch/: Cargo.toml
rust_test/procwatch/src/: main.rs
test/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
test/log/: latest_build
test/src/install/: local_setup.sh  setup.sh
test/src/install/workload_nodes/share/workload_nodes/: local_setup.dsv  package.bash  package.dsv  package.sh  package.xml  package.zsh
test/src/install/workload_nodes/share/workload_nodes/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  export_workload_nodes__rosidl_generator_cExport-noconfig.cmake  export_workload_nodes__rosidl_generator_cppExport.cmake  export_workload_nodes__rosidl_generator_pyExport-noconfig.cmake  export_workload_nodes__rosidl_generator_pyExport.cmake  workload_nodesConfig.cmake  workload_nodes__rosidl_typesupport_cExport-noconfig.cmake  workload_nodes__rosidl_typesupport_cExport.cmake  workload_nodes__rosidl_typesupport_cppExport-noconfig.cmake  workload_nodes__rosidl_typesupport_cppExport.cmake  workload_nodes__rosidl_typesupport_introspection_cppExport-noconfig.cmake
test/src/install/workload_nodes/share/workload_nodes/msg/: WorkloadMsg.json
test/src/log/: latest_build
test/src/process/: CMakeLists.txt  package.xml
test/src/process/config/: process_config.yaml
test/src/process/src/: preprocess_node.cpp
test/src/sensor/: CMakeLists.txt
test/src/sensor/src/: sensor_source.cpp
test/src/sink/: CMakeLists.txt  package.xml
test/src/sink/src/: n4.cpp
workload/Redbot02_1-master/redbot02/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_camera_detection/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_camera_detection/best_ncnn_model/: metadata.yaml
workload/Redbot02_1-master/redbot02_camera_detection/launch/: camera_color_detection.launch
workload/Redbot02_1-master/redbot02_camera_detection/scripts/: color_detection.py  color_detection_with_ledbar.py  ledbar_detector.py  ledbar_detector_yolov8n.py  yolov8n_to_tensorflow_lite.py
workload/Redbot02_1-master/redbot02_core/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_core/launch/: core.launch  core_with_imu.launch  imu.launch  remote.launch  robot.launch  teleop.launch
workload/Redbot02_1-master/redbot02_core/param/: param.yaml  param_backup.yaml
workload/Redbot02_1-master/redbot02_core/shell/: run.sh
workload/Redbot02_1-master/redbot02_core/src/: main.cpp  motor114_core_copy.cpp  redbot02_core.cpp
workload/Redbot02_1-master/redbot02_description/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_description/launch/: redbot02_description.launch
workload/Redbot02_1-master/redbot02_description/meshes/: bracket.STL  caster_back_link.STL  lidar.STL  tg30.dae
workload/Redbot02_1-master/redbot02_description/urdf/: redbot02.urdf  redbot02.urdf.xacro  redbot02_1.urdf  sensor_d455.urdf.xacro  test_d455_camera.urdf.xacro
workload/Redbot02_1-master/redbot02_description/urdf/.catkin_workspace/redbot02/: redbot02.usd
workload/Redbot02_1-master/redbot02_description/urdf/redbot02/: redbot02.usd
workload/Redbot02_1-master/redbot02_gazebo/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_gazebo/sdf/: redbot02.gazebo.xacro
workload/Redbot02_1-master/redbot02_navigation/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_navigation/config/: lidar_filter.yaml
workload/Redbot02_1-master/redbot02_navigation/include/clear_costmap/: clear_costmap.h
workload/Redbot02_1-master/redbot02_navigation/launch/: amcl.launch  clear_costmap.launch  lidar_filter.launch  navigation.launch  navigation_only_ekf.launch  navigation_rviz.launch  navigation_with_ekf.launch
workload/Redbot02_1-master/redbot02_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  redbot02.yaml
workload/Redbot02_1-master/redbot02_navigation/rviz/: redbot02_navigation.rviz
workload/Redbot02_1-master/redbot02_navigation/src/: clear_costmap.cpp  clear_costmap_node.cpp
workload/Redbot02_1-master/redbot02_odometry/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_odometry/launch/: ekf.launch  odom.launch
workload/Redbot02_1-master/redbot02_odometry/param/: param.yaml
workload/Redbot02_1-master/redbot02_odometry/src/: odometry_publisher.cpp  odometry_publisher_with_ekf.cpp
workload/Redbot02_1-master/redbot02_slam/: CMakeLists.txt  package.xml
workload/Redbot02_1-master/redbot02_slam/launch/: gmapping.launch  slam.launch
workload/Redbot02_1-master/redbot02_slam/maps/: skku7th.yaml  skku_7th.pgm  skku_7th.yaml
workload/Redbot02_1-master/redbot02_slam/param/: gmapping.yaml
workload/Redbot02_1-master/teleop_twist_keyboard_cpp/src/: teleop_twist_keyboard.cpp
workload/test/src/workload_nodes/: CMakeLists.txt  package.xml
workload/test/src/workload_nodes/config/: workload_config.yaml
workload/test/src/workload_nodes/msg/: WorkloadMsg.msg
workload/test/src/workload_nodes/src/: sensor_source.cpp
(+101 files in other folders)
