<?xml version="1.0"?>
<package format="3">
  <name>workload_nodes</name>
  <version>0.0.0</version>
  <description>Workload nodes for ROS2 scheduler experiments</description>
  <maintainer email="cnrlab@todo.todo">cnrlab</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
